nashorn/test/script/basic/NASHORN-623.js.EXPECTED
SyntaxError: Invalid JSON: <json>:1:11 Invalid JSON number format
{ "test" : -xxx }
           ^
